pulse: Add a JSON-parsing library

Adding this to be able to drop dependency on json-c.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=95135

Signed-off-by: Arun Raghavan <arun@arunraghavan.net>